...
                    .testTag("content"),
            verticalArrangement = Arrangement.Top) {
              OutlinedTextField(
                  value = targetCompany,
                  onValueChange = { newCompany -> targetCompany = newCompany },
                  label = {
                    Text("What company are you applying to?", modifier = Modifier.testTag(""))
                  },
                  modifier = Modifier.fillMaxWidth().testTag("company_field"),
                  singleLine = true,
                  colors =
                      androidx.compose.material.TextFieldDefaults.outlinedTextFieldColors(
                          backgroundColor = MaterialTheme.colorScheme.surface,
                          textColor = MaterialTheme.colorScheme.onSurface,
                          focusedBorderColor = MaterialTheme.colorScheme.outline,
...
                          focusedLabelColor = MaterialTheme.colorScheme.onSurface,
                          unfocusedLabelColor = MaterialTheme.colorScheme.onSurfaceVariant))

              OutlinedTextField(
                  value = jobPosition,
                  onValueChange = { newJobPosition -> jobPosition = newJobPosition },
                  label = { Text("What job are you applying to?") },
                  modifier = Modifier.fillMaxWidth().testTag("job_field"),
                  singleLine = true,
                  colors =
                      androidx.compose.material.TextFieldDefaults.outlinedTextFieldColors(
                          backgroundColor = MaterialTheme.colorScheme.surface,
                          textColor = MaterialTheme.colorScheme.onSurface,
                          focusedBorderColor = MaterialTheme.colorScheme.outline,
...
                      "How do you perform under pressure?",
                      "What is your greatest weakness?")

              ExposedDropdownMenuBox(
                  expanded = expanded,
                  onExpandedChange = { expanded = !expanded },
                  modifier = Modifier.fillMaxWidth().testTag("question_field")) {
                    TextField(
                        value = question,
                        onValueChange = {},
                        readOnly = true,
                        placeholder = {
                          Text(
...
                      navigationActions.goToOfflineRecording(question)
                    }
                  },
                  modifier =
                      Modifier.fillMaxWidth(0.8f)
                          .padding(AppDimensions.paddingSmall)
                          .testTag("doneButton")
                          .align(Alignment.CenterHorizontally),
                  colors =
                      ButtonDefaults.buttonColors(
                          containerColor = MaterialTheme.colorScheme.primary)) {
                    Text(
                        text = "Go to recording screen",
                        fontSize = AppFontSizes.buttonText,
                        color = MaterialTheme.colorScheme.surface)
                  }
            }
      }
}
...
