...
                  }

              Spacer(modifier = Modifier.height(AppDimensions.spacerHeightDefault))

              // Main text
              Text(
                  text = "No Internet Connection",
                  fontSize = AppFontSizes.titleLarge,
                  fontWeight = FontWeight.Bold,
                  color = colors.onBackground,
                  textAlign = TextAlign.Center,
                  modifier = Modifier.testTag("NoConnectionText"))

...
                              max = AppDimensions.buttonWidthMax)
                          .shadow(
                              AppDimensions.shadowElevation,
                              RoundedCornerShape(AppDimensions.buttonHeightRounded))
                          .testTag("PracticeOfflineButton")) {
                    Text(
                        text = "Practice Offline",
                        color = colors.onPrimary,
                        fontSize = AppFontSizes.subtitle,
                        fontWeight = FontWeight.Bold)
                  }
            }
      }
...
