...
            onValueChange = { username = it },
            label = { Text("Username") },
            placeholder = { Text("Enter your username") },
            modifier =
                Modifier.fillMaxWidth()
                    .height(AppDimensions.inputFieldHeight)
                    .testTag("username_input"),
            singleLine = true,
            colors =
                TextFieldDefaults.textFieldColors(
                    textColor = AppColors.textColor,
                    placeholderColor = AppColors.placeholderColor,
                    backgroundColor = AppColors.placeholderColor,
...
                }

                isUploading = false
                navigationActions.navigateTo(TopLevelDestinations.HOME)
              }
            },
            modifier = Modifier.fillMaxWidth().testTag("save_profile_button"),
            shape = AppShapes.circleShape,
            enabled = username.isNotBlank() && !isUploading,
            colors =
                ButtonDefaults.buttonColors(
                    backgroundColor = AppColors.buttonBackgroundColor,
                    contentColor = AppColors.buttonTextColor)) {
...
